--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -388,8 +388,7 @@ for(d in c("natural", "total")){
 # and input data from an AirQ+ case
 
 bestcost_pm_deaths_lifetable_airqplus <-
-  bestcost::attribute(
-    health_metric = "death_from_lifetable",
+  bestcost::attribute_deaths_from_lifetable(
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
@@ -414,7 +413,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_airqplus,
 
 bestcost_pm_deaths_lifetable_airqplus_copy <-
   bestcost::attribute_copy(
-    health_metric = "death_from_lifetable",
+    health_metric = "deaths_from_lifetable",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
@@ -440,31 +439,9 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_airqplus_copy
 
 ```{r premature deaths with lifetable}
 # Now with input data from the Swiss project GeLuft
-bestcost_pm_deaths_lifetable_geluft <- 
-    bestcost::attribute(
-    health_metric = "death_from_lifetable",
-    exp_central = input_data_mortality$exp[2], # PM2.5=8.85 exp in CH in 2019
-    cutoff = input_data_mortality$cutoff[2],   # PM2.5=5,i.e. WHO AQG 2021 
-    rr_central = input_data_mortality[2,"rr_central"], 
-    rr_lower = input_data_mortality[2,"rr_lower"], 
-    rr_upper = input_data_mortality[2,"rr_upper"],
-    erf_increment = 10, 
-    erf_shape = "log_linear",
-    first_age_pop = 0,
-    last_age_pop = 99,
-    prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
-    prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
-    prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
-    prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_midyear_male = lifetable_withPopulation[["male"]]$population, 
-    population_midyear_female = lifetable_withPopulation[["female"]]$population, 
-    year_of_analysis = 2019, 
-    info = input_data_mortality$pollutant[2], 
-    min_age = input_data_mortality$min_age[2])
 
 bestcost_pm_deaths_lifetable_geluft <- 
-    bestcost::attribute(
-    health_metric = "death_from_lifetable",
+    bestcost::attribute_deaths_from_lifetable(
     exp_central = input_data_mortality$exp[2], # PM2.5=8.85 exp in CH in 2019
     cutoff = input_data_mortality$cutoff[2],   # PM2.5=5,i.e. WHO AQG 2021 
     rr_central = input_data_mortality[2,"rr_central"], 
@@ -498,8 +475,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_geluft ,
 
 # Calculate premature deaths using bestcost function
 bestcost_pm_deaths_lifetable_expDistribution <- 
-    bestcost::attribute(
-      health_metric = "death_from_lifetable",
+    bestcost::attribute_deaths_from_lifetable(
       exp_central = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[2],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
@@ -808,7 +784,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta ,
 comparison_deaths_lifetable_delta <-
   bestcost::compare(
     comparison_method = "delta",
-    health_metric = "death_from_lifetable",
+    health_metric = "deaths_from_lifetable",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
@@ -856,7 +832,7 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_delta[["detail
 comparison_deaths_lifetable_pif  <-
   bestcost::compare(
     comparison_method = "pif",
-    health_metric = "death_from_lifetable",
+    health_metric = "deaths_from_lifetable",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
     exp_central_2 = 6, # Fake data just for testing purposes
