--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -157,6 +157,25 @@ system.time(bestcost_pm_copd_geo <-
     geo_id_aggregated = rep("CH", 1E4),
     info = "PM2.5_copd"))
 
+# Assess iteration geographical sections keeping the multiple uncertainties
+bestcost_pm_copd_geo <-
+  bestcost::attribute_health(
+    exp_central = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)),
+    exp_lower = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)-0.1),
+    exp_upper = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)+0.1),
+    cutoff = 5,   
+    bhd_central = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_lower = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_upper = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    rr_central = 1.369, 
+    rr_lower = 1.124,
+    rr_upper = 1.664,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    geo_id_raw = 1:1E4, 
+    geo_id_aggregated = rep("CH", 1E4),
+    info = "PM2.5_copd")
+
 ```
 
 
@@ -716,8 +735,36 @@ comparison_singlebhd_rr_pif <-
 # Check only if results stay the same overtime despite developments
 check_bestcost(result_list_bestcost = comparison_singlebhd_rr_pif ,
                result_vector_alternative = c(782, 412, 1146)) # Result on 16 May 2024
+```
 
 
+```{r comparison singlebhd_rr geo iteration, eval=FALSE, include=FALSE}
+# Assess iteration geographical sections keeping the multiple uncertainties
+system.time(comparison_singlebhd_rr_geo <-
+  bestcost::compare_health(
+    comparison_method = "delta",
+    exp_central_1 = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)),
+    exp_lower_1 = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)-0.1),
+    exp_upper_1 = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)+0.1),
+    exp_central_2 = as.list(runif_with_seed(1E4, 8.0, 9.0, 2)),
+    exp_lower_2 = as.list(runif_with_seed(1E4, 8.0, 9.0, 2)-0.1),
+    exp_upper_2 = as.list(runif_with_seed(1E4, 8.0, 9.0, 2)+0.1),
+    cutoff = 5,   
+    bhd_central_1 = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_lower_1 = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_upper_1 = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_central_2 = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_lower_2 = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_upper_2 = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    rr_central = 1.369, 
+    rr_lower = 1.124,
+    rr_upper = 1.664,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    geo_id_raw = 1:1E4, 
+    geo_id_aggregated = rep("CH", 1E4),
+    info_1 = "PM2.5_mortality_2010",
+    info_2 = "PM2.5_mortality_2020"))
 ```
 
 
