--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -790,6 +790,19 @@ comparison_singlebhd_ar_delta <-
 check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta ,
                result_vector_alternative = c(62531)) # Result on 23 May 2024
 
+comparison_singlebhd_ar_delta_geo <-
+  bestcost::compare_health_ar(
+    comparison_method = "delta",
+    exp_central_1 = list(c(57.5, 62.5, 67.5, 72.5, 77.5), c(57, 62, 67, 72, 77)),# Fake values
+    exp_central_2 = list(c(50, 55, 60, 65, 75), c(50.5, 55.5, 60.5, 65.5, 75.5)), # Fake values
+    pop_exp_1 = list(c(387500, 286000, 191800, 72200, 7700), c(380000, 280000, 190800, 72000, 7000)), # Fake values
+    pop_exp_2 = list(c(387500, 286000, 191800, 72200, 7700), c(380000, 280000, 190800, 72000, 7000)), # Fake values
+    erf_c_central = "78.9270-3.1162*c+0.0342*c^2",
+    info_1 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2020),
+    info_2 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2022),
+    geo_id_raw = c("a", "b"),
+    geo_id_aggregated = rep("ch", 2))
+
 
 
 
